--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="share">Share</string>
     <string name="menu_detect_piano">Detect Piano</string>
     <string name="menu_detect_skin">Detect Skin</string>
+    <string name="menu_set_piano">Set Piano</string>
     <string name="menu_dilation">Dilation</string>
     <string name="menu_erosion">Erosion</string>
     <string name="menu_play">Play</string>
