Added more notes Coded piano layout 2 button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,6 @@
     <string name="menu_set_piano">Set Piano</string>
     <string name="menu_dilation">Dilation</string>
     <string name="menu_erosion">Erosion</string>
-    <string name="menu_play">Play</string>
+    <string name="menu_change_layout">Layout</string>
 
 </resources>
