Removed/Commented out unnecessary codes Coded savedInstanceState Updated KeyPressDetector's LMOP2F after resuming app

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_set_piano">Set Piano</string>
     <string name="menu_toggle_layout">Layout</string>
     <string name="menu_toggle_hands">Hand</string>
+    <string name="menu_toggle_octave">Octave</string>
     <string name="menu_dynamic_touch">Dynamic Touch</string>
     <string name="menu_hsv">HSV</string>
     <string name="menu_ycbcr">YCbCr</string>
