--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Virtual Piano</string>
     <string name="menu_next_camera">Cam</string>
     <string name="menu_image_size">Size</string>
     <string name="share">Share</string>
     <string name="menu_detect_piano">Detect Piano</string>
-    <string name="menu_detect_skin">Detect Skin</string>
+    <string name="menu_detect_skin">Detect Fingers</string>
     <string name="menu_set_piano">Set Piano</string>
-    <string name="menu_toggle_layout">Layout</string>
-    <string name="menu_toggle_hands">Two Hands</string>
+    <string name="menu_toggle_hands">Toggle Hands</string>
     <string name="menu_toggle_octave">Toggle Octave</string>
     <string name="menu_toggle_draw_piano">Draw Piano</string>
-    <string name="menu_dynamic_touch">Dynamic Touch</string>
+    <string name="menu_toggle_dynamic_touch">Dynamic Touch</string>
     <string name="menu_hsv">HSV</string>
     <string name="menu_ycbcr">YCbCr</string>
     <string name="menu_dilation">Dilation</string>
     <string name="menu_erosion">Erosion</string>
-    <string name="menu_change_layout">Layout</string>
-
 </resources>
